[gd_scene load_steps=36 format=3 uid="uid://bro8isx4v6mog"]

[ext_resource type="Script" uid="uid://l7pmtf2k7xl5" path="res://Scripts/UI/options_menu_main.gd" id="1_vmdmf"]
[ext_resource type="Texture2D" uid="uid://ck2m7jma1v708" path="res://Assets/UI/MainMenu/Settings_Right.png" id="3_mklkl"]
[ext_resource type="Texture2D" uid="uid://csmyfsw1fxqk" path="res://Assets/UI/MainMenu/Settings_Middle.png" id="4_imus4"]
[ext_resource type="Texture2D" uid="uid://c3nghonirdxv1" path="res://Assets/UI/MainMenu/Settings_Left.png" id="5_jgah8"]
[ext_resource type="Texture2D" uid="uid://dorfj71cn3ax0" path="res://Assets/UI/MainMenu/Settings_Game_Hover.png" id="6_1o0vj"]
[ext_resource type="Texture2D" uid="uid://doanyvtc5rylh" path="res://Assets/UI/MainMenu/Settings_Game_Pressed.png" id="7_e481c"]
[ext_resource type="Texture2D" uid="uid://bqgbsn03diat2" path="res://Assets/UI/MainMenu/Settings_Game_Normal.png" id="8_yx2xe"]
[ext_resource type="Texture2D" uid="uid://bk2mdbh1ck56b" path="res://Assets/UI/MainMenu/Settings_Video_Hover.png" id="9_ikyed"]
[ext_resource type="Texture2D" uid="uid://cjq8nyc83sibr" path="res://Assets/UI/MainMenu/Settings_Video_Pressed.png" id="10_7gs33"]
[ext_resource type="Texture2D" uid="uid://bqiflcvkeaxos" path="res://Assets/UI/MainMenu/Settings_Video_Normal.png" id="11_638e4"]
[ext_resource type="Texture2D" uid="uid://bp7rl6kpvmia3" path="res://Assets/UI/MainMenu/Settings_Audio_Hover.png" id="12_svsm0"]
[ext_resource type="Texture2D" uid="uid://bc5gmjrr0vulo" path="res://Assets/UI/MainMenu/Settings_Audio_Pressed.png" id="13_t1mow"]
[ext_resource type="Texture2D" uid="uid://ddhfeyh0u5k62" path="res://Assets/UI/MainMenu/Settings_Audio_Normal.png" id="14_uw3rk"]
[ext_resource type="FontFile" uid="uid://c0n70i3ydi2gk" path="res://Assets/fonts/GrapeSoda.ttf" id="15_v6kin"]
[ext_resource type="Texture2D" uid="uid://b50nr213esix4" path="res://Assets/UI/Options/Checkbox_Checked.png" id="16_i7n6p"]
[ext_resource type="Texture2D" uid="uid://cyn4ah5v3wkjo" path="res://Assets/UI/Options/Checkbox_Normal.png" id="17_qp00o"]
[ext_resource type="Texture2D" uid="uid://dpuprroaqg4io" path="res://Assets/UI/Options/Slider_Icon_Normal.png" id="18_xe0y8"]
[ext_resource type="Texture2D" uid="uid://d2eta5n673kr1" path="res://Assets/UI/Options/Slider_Icon_Hover.png" id="19_blfcs"]
[ext_resource type="Script" uid="uid://dj83u1rybnd8y" path="res://Scripts/UI/volume.gd" id="20_hew3b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jj56x"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mkk6m"]
texture = ExtResource("6_1o0vj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rysnb"]
texture = ExtResource("7_e481c")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vyiac"]
texture = ExtResource("8_yx2xe")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ee5s6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7nw7k"]
texture = ExtResource("9_ikyed")
texture_margin_left = 10.0
texture_margin_right = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4tclg"]
texture = ExtResource("10_7gs33")
texture_margin_left = 10.0
texture_margin_right = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ja6a"]
texture = ExtResource("11_638e4")
texture_margin_left = 10.0
texture_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ekpp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xl74p"]
texture = ExtResource("12_svsm0")
texture_margin_left = 10.0
texture_margin_right = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mkxud"]
texture = ExtResource("13_t1mow")
texture_margin_left = 10.0
texture_margin_right = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2nnab"]
texture = ExtResource("14_uw3rk")
texture_margin_left = 10.0
texture_margin_right = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tdkwh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1rmj"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoglm"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_me5oc"]

[node name="Options_Menu" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmdmf")

[node name="Settings_Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 95
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 10

[node name="Settings_Right" type="TextureRect" parent="Settings_Margin"]
layout_mode = 2
texture = ExtResource("3_mklkl")
expand_mode = 1

[node name="Settings_Mid" type="TextureRect" parent="Settings_Margin"]
layout_mode = 2
texture = ExtResource("4_imus4")
expand_mode = 1

[node name="Settings_Left" type="TextureRect" parent="Settings_Margin"]
layout_mode = 2
texture = ExtResource("5_jgah8")
expand_mode = 1

[node name="SettingsTabs" type="HBoxContainer" parent="Settings_Margin"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Game_Settings_Button" type="Button" parent="."]
custom_minimum_size = Vector2(88.25, 38.77)
layout_mode = 2
offset_left = 172.0
offset_top = 102.0
offset_right = 260.25
offset_bottom = 140.77
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_jj56x")
theme_override_styles/hover = SubResource("StyleBoxTexture_mkk6m")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rysnb")
theme_override_styles/normal = SubResource("StyleBoxTexture_vyiac")
icon_alignment = 1
expand_icon = true

[node name="Video_Settings_Button" type="Button" parent="."]
custom_minimum_size = Vector2(88.25, 38.77)
layout_mode = 2
offset_left = 276.0
offset_top = 102.0
offset_right = 364.25
offset_bottom = 140.77
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ee5s6")
theme_override_styles/hover = SubResource("StyleBoxTexture_7nw7k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4tclg")
theme_override_styles/normal = SubResource("StyleBoxTexture_1ja6a")
icon_alignment = 1
expand_icon = true

[node name="Audio_Settings_Button" type="Button" parent="."]
custom_minimum_size = Vector2(88.25, 38.77)
layout_mode = 2
offset_left = 379.0
offset_top = 102.0
offset_right = 467.25
offset_bottom = 140.77
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ekpp")
theme_override_styles/hover = SubResource("StyleBoxTexture_xl74p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mkxud")
theme_override_styles/normal = SubResource("StyleBoxTexture_2nnab")
icon_alignment = 1
expand_icon = true

[node name="Settings_Game" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 172.0
offset_top = 146.0
offset_right = -173.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings_Video" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 172.0
offset_top = 146.0
offset_right = -176.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings_Video"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 190.0
offset_bottom = 195.0

[node name="ResolutionLabel" type="Label" parent="Settings_Video/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_v6kin")
text = "RESOLUTION:"

[node name="ResolutionButton" type="OptionButton" parent="Settings_Video/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.77084, 0.770839, 0.770839, 1)
theme_override_colors/font_focus_color = Color(0.772549, 0.772549, 0.772549, 1)
theme_override_fonts/font = ExtResource("15_v6kin")
selected = 2
item_count = 5
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1280 x 720"
popup/item_2/id = 2
popup/item_3/text = "854 x 480"
popup/item_3/id = 3
popup/item_4/text = "640 x 360"
popup/item_4/id = 4

[node name="FullscreenLabel" type="Label" parent="Settings_Video/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_v6kin")
text = "FULLSCREEN:"

[node name="FullscreenBox" type="CheckBox" parent="Settings_Video/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_tdkwh")
theme_override_icons/checked = ExtResource("16_i7n6p")
theme_override_icons/unchecked = ExtResource("17_qp00o")

[node name="Settings_Audio" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 172.0
offset_top = 146.0
offset_right = -169.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings_Audio"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 204.0
offset_bottom = 190.0
theme_override_constants/separation = 3

[node name="VolumeLabel" type="Label" parent="Settings_Audio/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_v6kin")
text = "MASTER VOLUME:"

[node name="Volume" type="HSlider" parent="Settings_Audio/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("18_xe0y8")
theme_override_icons/grabber_highlight = ExtResource("19_blfcs")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_m1rmj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_uoglm")
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("20_hew3b")

[node name="Label" type="Label" parent="Settings_Audio/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_v6kin")
text = "MUTE:"

[node name="MuteBox" type="CheckBox" parent="Settings_Audio/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("15_v6kin")
theme_override_styles/focus = SubResource("StyleBoxEmpty_me5oc")
theme_override_icons/checked = ExtResource("16_i7n6p")
theme_override_icons/unchecked = ExtResource("17_qp00o")

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings_Audio"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -84.0
offset_top = 20.0
offset_right = -29.0
offset_bottom = 44.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="Settings_Audio/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="VolumePerc" type="Label" parent="Settings_Audio/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_v6kin")
theme_override_font_sizes/font_size = 24
text = "100%"
vertical_alignment = 1

[connection signal="pressed" from="Game_Settings_Button" to="." method="_on_game_settings_pressed"]
[connection signal="pressed" from="Video_Settings_Button" to="." method="_on_video_settings_pressed"]
[connection signal="pressed" from="Audio_Settings_Button" to="." method="_on_audio_settings_pressed"]
[connection signal="item_selected" from="Settings_Video/VBoxContainer/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="toggled" from="Settings_Video/VBoxContainer/FullscreenBox" to="." method="_on_fullscreen_box_toggled"]
[connection signal="mouse_exited" from="Settings_Audio/VBoxContainer/Volume" to="Settings_Audio/VBoxContainer/Volume" method="_on_mouse_exited"]
[connection signal="value_changed" from="Settings_Audio/VBoxContainer/Volume" to="Settings_Audio/VBoxContainer/Volume" method="_on_value_changed"]
[connection signal="toggled" from="Settings_Audio/VBoxContainer/MuteBox" to="Settings_Audio/VBoxContainer/Volume" method="_on_mute_box_toggled"]
